--- a/.docker-build-ami_REPLACE.conf
+++ b/.docker-build-ami_REPLACE.conf
@@ -2,8 +2,8 @@
 # The AMI Name of the output image
 image_name = Prowler-Security-Hardening-Scan
 
-# Base image from which the output image is built. ubuntu 20.04
-image_id = ami-010b037ac11a0e6f4
+# Base image from which the output image is built. Ubuntu 20.04
+image_id = ami-05f7491af5eef733a
 
 # EC2 user used to build instances (usually AMI dependent)
 image_user = ubuntu
