--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@
 *.tgz
 *.tsbuildinfo
 .cache
+.docker-build-ami.conf
+.env
 .eslintcache
 .nyc_output
 .yarn-integrity
@@ -16,6 +18,8 @@
 /test-reports/
 build/Release
 coverage
+docker-build-ami.log
+easy-rsa
 jspm_packages/
 junit.xml
 lerna-debug.log*
