fix: deploy ami to use-east-1

--- a/.docker-build-ami_REPLACE.conf
+++ b/.docker-build-ami_REPLACE.conf
@@ -1,24 +1,24 @@
 [main]
 # The AMI Name of the output image
-image_name = Prowler-Security-Hardening-Scan
+image_name = Prowler-Security-Hardening-Scan-v1.0.0
 
 # Base image from which the output image is built. Ubuntu 20.04
-image_id = ami-05f7491af5eef733a
+image_id = ami-09e67e426f25ce0d7
 
 # EC2 user used to build instances (usually AMI dependent)
 image_user = ubuntu
 
 # Region for the image and EC2 instance that builds the image
-region = eu-central-1
+region = us-east-1
 
 # Subnet ID used for the EC2 that builds the image
-subnet_id = subnet-0196345821f2691c1
+subnet_id = subnet-022a9fcc1c9a0a4f4
 
 # Instance type of the EC2 that builds the image
 instance_type = t2.micro
 
 # Security Groups of the EC2 that builds the image
-security_group_ids = ["sg-0ee1b9196d27f1e22"]
+security_group_ids = ["sg-0a607196ae77940e0"]
 
 # Name tag for host building AMI image
 # host_tag = docker-build-ami
