fix: ami release script improvements

--- a/.docker-build-ami_REPLACE.conf
+++ b/.docker-build-ami_REPLACE.conf
@@ -1,6 +1,6 @@
 [main]
 # The AMI Name of the output image
-image_name = Prowler-Security-Hardening-Scan-v1.0.1
+image_name = Prowler-Security-Hardening-Scan-##ami_version##
 
 # Base image from which the output image is built. Ubuntu 20.04
 image_id = ami-09e67e426f25ce0d7
