feat: update prowler to 2.6.0 & update cdk-prowler to 1.132.0

--- a/.docker-build-ami_REPLACE.conf
+++ b/.docker-build-ami_REPLACE.conf
@@ -1,6 +1,7 @@
 [main]
 # The AMI Name of the output image
-image_name = Prowler-Security-Hardening-Scan-##ami_version##
+image_name = Security-Hardening-Scan
+#-##ami_version##
 
 # Base image from which the output image is built. Ubuntu 20.04
 image_id = ami-09e67e426f25ce0d7
@@ -12,13 +13,15 @@ image_user = ubuntu
 region = us-east-1
 
 # Subnet ID used for the EC2 that builds the image
-subnet_id = subnet-022a9fcc1c9a0a4f4
+#TODO ##subnet_id##
+subnet_id = subnet-04e353503bd9bf0fd
 
 # Instance type of the EC2 that builds the image
 instance_type = t2.micro
 
 # Security Groups of the EC2 that builds the image
-security_group_ids = ["sg-0a607196ae77940e0"]
+#TODO ##sg_id##
+security_group_ids = ["sg-0ca56c95ed8f93938"]
 
 # Name tag for host building AMI image
 # host_tag = docker-build-ami
