--- a/package.json
+++ b/package.json
@@ -1,27 +1,29 @@
 {
   "name": "sec-ami",
   "scripts": {
+    "build": "npx projen build",
+    "bump": "npx projen bump",
     "clobber": "npx projen clobber",
     "compile": "npx projen compile",
-    "test:compile": "npx projen test:compile",
-    "test": "npx projen test",
-    "build": "npx projen build",
-    "test:watch": "npx projen test:watch",
-    "test:update": "npx projen test:update",
-    "bump": "npx projen bump",
-    "unbump": "npx projen unbump",
+    "default": "npx projen default",
+    "package": "npx projen package",
+    "post-compile": "npx projen post-compile",
+    "pre-compile": "npx projen pre-compile",
     "publish:github": "npx projen publish:github",
+    "release": "npx projen release",
+    "test": "npx projen test",
+    "test:update": "npx projen test:update",
+    "test:watch": "npx projen test:watch",
+    "unbump": "npx projen unbump",
     "upgrade": "npx projen upgrade",
     "upgrade-projen": "npx projen upgrade-projen",
-    "default": "npx projen default",
-    "release": "npx projen release",
     "projen": "npx projen"
   },
   "devDependencies": {
-    "jest": "^27.0.6",
+    "jest": "^27.3.1",
     "jest-junit": "^12",
     "npm-check-updates": "^11",
-    "projen": "^0.27.27",
+    "projen": "^0.33.8",
     "standard-version": "^9"
   },
   "bundledDependencies": [],
