--- a/.github/workflows/upgrade-main.yml
+++ b/.github/workflows/upgrade-main.yml
@@ -39,8 +39,6 @@ jobs:
         with:
           name: .upgrade.tmp.patch
           path: .upgrade.tmp.patch
-    container:
-      image: jsii/superchain:1-buster-slim
   pr:
     name: Create Pull Request
     needs: upgrade
@@ -70,7 +68,7 @@ jobs:
         id: create-pr
         uses: peter-evans/create-pull-request@v3
         with:
-          token: ${{ secrets.PROJEN_GITHUB_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
           commit-message: >-
             chore(deps): upgrade dependencies
 
